docs/apache-airflow-providers-google/6.6.0/_sources/_api/airflow/providers/google/cloud/hooks/dataprep/index.rst.txt
:py:mod:`airflow.providers.google.cloud.hooks.dataprep`
=======================================================

.. py:module:: airflow.providers.google.cloud.hooks.dataprep

.. autoapi-nested-parse::

   This module contains Google Dataprep hook.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.hooks.dataprep.GoogleDataprepHook




.. py:class:: GoogleDataprepHook(dataprep_conn_id = default_conn_name)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Hook for connection with Dataprep API.
   To get connection Dataprep with Airflow you need Dataprep token.
   https://clouddataprep.com/documentation/api#section/Authentication

   It should be added to the Connection in Airflow in JSON format.


   .. py:attribute:: conn_name_attr
      :annotation: = dataprep_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = google_cloud_dataprep_default

      

   .. py:attribute:: conn_type
      :annotation: = dataprep

      

   .. py:attribute:: hook_name
      :annotation: = Google Dataprep

      

   .. py:method:: get_jobs_for_job_group(self, job_id)

      Get information about the batch jobs within a Cloud Dataprep job.

      :param job_id: The ID of the job that will be fetched


   .. py:method:: get_job_group(self, job_group_id, embed, include_deleted)

      Get the specified job group.
      A job group is a job that is executed from a specific node in a flow.

      :param job_group_id: The ID of the job that will be fetched
      :param embed: Comma-separated list of objects to pull in as part of the response
      :param include_deleted: if set to "true", will include deleted objects


   .. py:method:: run_job_group(self, body_request)

      Creates a ``jobGroup``, which launches the specified job as the authenticated user.
      This performs the same action as clicking on the Run Job button in the application.
      To get recipe_id please follow the Dataprep API documentation
      https://clouddataprep.com/documentation/api#operation/runJobGroup

      :param body_request: The identifier for the recipe you would like to run.



